[project]
name = "langc-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=5.0.0",
    "huggingface-hub>=1.18.0",
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langgraph>=1.2.4",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
]
